# ai-hackathon

./: .env  .gitignore  DEMO_REPORT.html  DEMO_REPORT_18Nov2025.html  README.md  complete_db_architecture.md  create_local_db.py  export_tables.py  pyproject.toml  report_explaination.md  schemas.json  server.py  tender_intel.db  test_report.py
app/: main.py
exported_tables/: company_certifications.csv  company_equipment.csv  company_financials.csv  company_insurance.csv  company_licenses.csv  company_personnel.csv  company_projects.csv  company_safety_quality.csv  email_metadata.csv  extract_csv_schemas.py  gdrive_file_tracking.csv  processing_log.csv  tender_document_chunks.csv  tender_documents.csv  tender_qualification_criteria.csv  tender_received_documents.csv  tender_required_documents.csv  tenders.csv
modules/: completeness_checker.py  db_connection.py  qualification_matcher.py  report_generator.py
newAutoReporter/: DELIVERY_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  REPORT_GENERATOR_README.md  demo_report_generator.py  html_report_generator.py  report_generator.py  report_integration.py  requirements.txt  setup.sh
parser/: docparser.py
templates/: interactive_report.html
