[project]
name = "ai-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sshtunnel>=0.4.0",
    "uvicorn>=0.38.0",
]
